Use CSS media queries for cleaner max-width fixes. Add a JS for orientation change, still have yet to build the zoom refactor based on this, but horizontal scrolling should (for the most part) be lessened.

--- a/wdn/templates_3.0/css/variations/mobile.css
+++ b/wdn/templates_3.0/css/variations/mobile.css
@@ -109,11 +109,23 @@ body.mobile #footer #wdn_copyright {
 }
 
 
-/*
-@media only screen and (max-width: 600px) {
-    body.mobile #titlegraphic {width:480px;}
-    div {
-        max-width:480px;
-    }   
+/* CSS3 Media Queries */
+@media screen and (max-width: 480px) {
+    body.mobile #titlegraphic h1 {max-width:50%;}
+    * {
+        max-width:100%;
+    }
+    img {
+        max-width:95% !important;
+    }
+    
 }
-*/
+@media screen and (max-width: 320px) {
+    body.mobile #titlegraphic h1 {max-width:50%;}
+    * {
+        max-width:100%;
+    }
+    img {
+        max-width:95% !important;
+    }
+}
